Add Hydrion API to create extensions and some endpoints handling in client